--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http:https://qcm-app-dz.herokuapp.com
+API_URL=http:https://qcm-app-dz.herokuapp.com/
+
+CLIENT_URL=http://localhost:4200
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
